New delete endpoint
